--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,3 +25,4 @@ target_compile_features(octonav PUBLIC cxx_std_17)
 add_executable(matlab_example matlab_example.cpp)
 target_link_libraries(matlab_example PRIVATE ${Matlab_LIBRARIES} Threads::Threads)
 target_include_directories(matlab_example PRIVATE ${Matlab_INCLUDE_DIRS})
+target_compile_features(matlab_example PUBLIC cxx_std_17)
