--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,33 +1,41 @@
 find_package(octomap REQUIRED)
 find_package(Matlab REQUIRED ENG_LIBRARY MAT_LIBRARY)
+if(UNIX)
+    find_package(Threads REQUIRED)
+endif()
 
 # The octomap-navigation library
-file(GLOB OCTOMAP_NAVIGATION_HEADERS CONFIGURE_DEPENDS
+file(GLOB OCTONAV_HEADERS CONFIGURE_DEPENDS
     ../include/octonav/*.hpp
 )
 
-# Visualize
-add_library(visualize visualize.cpp ${OCTOMAP_NAVIGATION_HEADERS})
-# target_include_directories(visualize PRIVATE ../include/)
-target_link_libraries(visualize PUBLIC ${Matlab_LIBRARIES})
-target_include_directories(visualize PUBLIC ${Matlab_INCLUDE_DIRS})
-target_link_libraries(visualize PUBLIC octograph)
-
-# Octograph
-add_library(octograph OctoGraph.cpp ${OCTOMAP_NAVIGATION_HEADERS})
-target_include_directories(octograph PUBLIC  ../include/)
-target_link_libraries(octograph PUBLIC octomap)
-# target_include_directories(octograph PUBLIC octomap)
-target_compile_features(octograph PUBLIC cxx_std_17)
-
+# Octonav
+add_library(octonav 
+    OctoGraph.cpp
+    a_star_generic.cpp
+    visualize.cpp
+    ${OCTONAV_HEADERS}
+)
+target_include_directories(octonav 
+    PUBLIC  
+        ../include/
+        ${OCTOMAP_INCLUDE_DIRS}
+    PRIVATE
+        ${Matlab_INCLUDE_DIRS}
+)
+target_link_libraries(octonav PUBLIC octomap PRIVATE ${Matlab_LIBRARIES})
+if(UNIX)
+    target_link_libraries(octonav PRIVATE Threads::Threads)
+endif()
+target_compile_features(octonav PUBLIC cxx_std_17)
 
 
 # Example provided by octomap devs
-add_executable(simple_example simple_example.cpp  ${OCTOMAP_NAVIGATION_HEADERS})
-# target_link_libraries(simple_example PRIVATE octomap)
-target_link_libraries(simple_example PRIVATE visualize)
-# target_link_libraries(simple_example PRIVATE octograph)
-# target_include_directories(simple_example PRIVATE  ../include/)
-# target_include_directories(simple_example PRIVATE octomap)
-# target_include_directories(simple_example PUBLIC ../include/)
+add_executable(simple_example simple_example.cpp)
+target_link_libraries(simple_example PRIVATE octomap)
+
+# Main
+add_executable(main main.cpp)
+target_link_libraries(main PRIVATE octonav)
+
 
