--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ include(Catch)
 
 file(GLOB TEST_SRC "*.cpp")
 add_executable(tests ${TEST_SRC})
-target_link_libraries(tests PRIVATE Catch2::Catch2 octonav)
+target_link_libraries(tests PRIVATE Catch2::Catch2 octonav visualize)
 catch_discover_tests(tests)
